Initial patch by Stefan Becker (stefan.becker nokia com). David Faure gave good input on the process of the patch review.

BUG: 172042

svn path=/trunk/KDE/kdelibs/; revision=871409